customers/b01/prod/deploy/immich-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: immich
spec:
  tls:
  - hosts:
    - immich.mckensy.xyz
    secretName: immich-tls
  ingressClassName: nginx
  rules:
  - host: immich.mckensy.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: b01-immich-prod-server
            port:
              number: 2283
